Add some styles to inputs and forms

--- a/views/access-file.ejs
+++ b/views/access-file.ejs
@@ -10,7 +10,7 @@
     <p><%=texts.PASSPHRASE %>:<p>
     <form action="/files/<%=filename %>" method="get">
      <input type="password" name="passphrase">
-     <input type="submit">
+     <input type="submit" class="btn btn-submit" value="<%=texts.SUBMIT %>">
     </form>
   </body>
 </html>
