--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
      <br>
      <input type="submit" class="btn btn-submit" value="<%=texts.SUBMIT %>">
     </form>
+    <a href="/logout" class="logout-btn"><%=texts.LOGOUT %></a>
     <script type="text/javascript">
       document.getElementById('file-input').addEventListener('change', function () {
         document.getElementById('file-label').innerHTML = this.files[0].name;
