--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,8 +93,39 @@ input[type='password'], input[type='email'] {
 .btn-submit {
     float: right;
 }
-.logout-btn {
+.footer {
     position: absolute;
     bottom: 20px;
     right: 50px;
+}
+.footer a, .footer span {
+  margin: 10px;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+td a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.error-box {
+	padding:15px;
+  display: block;
+	color:#c7254e;
+	background-color:#f9f2f4
 }
