--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,15 @@
   <body>
     <h1>Flydocument Encrypted</h1>
     <p><%=texts.LOGIN_PAGE_MSG %> Flydocument Encrypted.</p>
+    <%if (message.length) { %>
+      <span class="error-box">
+      <%if (message[0] == 'invalid-email') { %>
+        <%=texts.INVALID_EMAIL %>
+      <% } else if (message[0] == 'invalid-password') { %>
+        <%=texts.INVALID_PASSWORD %>
+      <% } %>
+      </span>
+    <% } %>
     <form action="/login" method="post">
       <label for="email"><%=texts.EMAIL %>:</label>
       <input type="email" name="email">
