--- a/views/new-account.ejs
+++ b/views/new-account.ejs
@@ -14,5 +14,12 @@
      <input type="password" name="password">
      <input type="submit" class="btn btn-submit" value="<%=texts.SUBMIT %>">
     </form>
+    <%if (!connected) { %>
+    <p class="footer">
+      <a href="/"><%=texts.HOME_PAGE %></a>
+      <a href="/users/"><%=texts.USERS_LIST %></a>
+      <a href="/logout"><%=texts.LOGOUT %></a>
+    </p>
+    <% } %>
   </body>
 </html>
