--- a/views/file-uploaded.ejs
+++ b/views/file-uploaded.ejs
@@ -10,6 +10,7 @@
     <p><%=texts.SHARE_LINK %>: <a href="/files/access/<%= filename %>/" target="_blank"><span id="location"></span>/files/access/<%= filename %>/</a></p>
     <p class="footer">
       <a href="/"><%=texts.HOME_PAGE %></a>
+      <a href="/files/"><%=texts.FILES_LIST %></a>
       <a href="/users/"><%=texts.USERS_LIST %></a>
       <a href="/logout"><%=texts.LOGOUT %></a>
     </p>
