--- a/views/success-page.ejs
+++ b/views/success-page.ejs
@@ -17,6 +17,7 @@
     </h2>
     <p class="footer">
       <a href="/"><%=texts.HOME_PAGE %></a>
+      <a href="/files/"><%=texts.FILES_LIST %></a>
       <a href="/users/"><%=texts.USERS_LIST %></a>
       <a href="/logout"><%=texts.LOGOUT %></a>
     </p>
