--- a/views/users-list.ejs
+++ b/views/users-list.ejs
@@ -20,6 +20,7 @@
       <% } %>
       <p class="footer">
         <a href="/"><%=texts.HOME_PAGE %></a>
+        <a href="/files/"><%=texts.FILES_LIST %></a>
         <span><%=texts.USERS_LIST %></span>
         <a href="/logout"><%=texts.LOGOUT %></a>
       </p>
