--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1>Flydocument Encrypted</h1>
     <p><%=texts.WELCOME_MSG %> Flydocument Encrypted.</p>
-    <form action="/files/" method="post" enctype="multipart/form-data">
+    <form action="/files/new" method="post" enctype="multipart/form-data">
      <label for="passphrase"><%=texts.PASSPHRASE %>:</label>
      <input type="password" name="passphrase">
      <label for="file"><%=texts.FILE %>: <span id="file-label"></span></label>
@@ -19,6 +19,7 @@
     </form>
     <p class="footer">
       <span><%=texts.HOME_PAGE %></span>
+      <a href="/files/"><%=texts.FILES_LIST %></a>
       <a href="/users/"><%=texts.USERS_LIST %></a>
       <a href="/logout"><%=texts.LOGOUT %></a>
     </p>
