--- a/views/new-account.ejs
+++ b/views/new-account.ejs
@@ -17,6 +17,7 @@
     <%if (!connected) { %>
     <p class="footer">
       <a href="/"><%=texts.HOME_PAGE %></a>
+      <a href="/files/"><%=texts.FILES_LIST %></a>
       <a href="/users/"><%=texts.USERS_LIST %></a>
       <a href="/logout"><%=texts.LOGOUT %></a>
     </p>
